--- a/MyApp/templates/MyApp/padre.html
+++ b/MyApp/templates/MyApp/padre.html
@@ -24,7 +24,7 @@
                 <a class="navbar-brand" href="{% url 'Desarrolladores' %}">Desarrolladores</a>
                 <a class="navbar-brand" href="{% url 'Compradores' %}">Compradores</a>
                 <a class="navbar-brand" href="{% url 'Vendedores' %}">Vendedores</a>
-                <a class="btn btn-primary" href="{% url 'Login' %}">INICIAR</a>
+                <a class="btn btn-primary" href="{% url 'Login' %}">LOGIN</a>
             </div>
         </nav>
 
